--- a/src/sample/README
+++ b/src/sample/README
@@ -1,6 +1,2 @@
-# What I need to do
-
-
-Still need to tidy up my dice methods
-Still need to finish up the remaining applications - as I do want to create all of them before Friday.
+Launch the program and enjoy!
 
